# aigit

./: .gitignore  AGENT_API.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  FIXES_SUMMARY.md  Makefile  README.md  SPEC.md  TODO.md  config.example.toml  setup.sh
.github/workflows/: ci.yml
demo/: run_demo.sh
migrations/: 20260318000000_init.sql  20260318000001_optimizations.sql
src/: cli.rs  db.rs  git.rs  lib.rs  llm.rs  main.rs  mcp.rs
tests/: integration.rs
