[package]
name = "aigit"
version = "0.1.0"
edition = "2021"
authors = ["Chris Woodcox <chris@woodcox.me>"]
description = "AI-native version control for multi-agent collaboration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cwoodcox/aigit"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
uuid = { version = "1.8", features = ["v7"] }
chrono = "0.4"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
similar = "2.4"  # for text diffing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # size optimizations